// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "shop-goframe-micro-service/app/goods/api/pbentity";

import "google/protobuf/timestamp.proto";

message CouponInfo {
    int32                     Id        = 1; //
    int32                     GoodsId   = 2; // 关联商品id（0表示全场通用）
    string                    Name      = 3; // 优惠券名称
    int32                     Type      = 4; // 优惠券类型：0-新人券，1-活动券，2-其他
    int32                     Amount    = 5; // 优惠金额（单位：分）
    google.protobuf.Timestamp Deadline  = 6; // 过期时间
    google.protobuf.Timestamp CreatedAt = 7; // 创建时间
    google.protobuf.Timestamp UpdatedAt = 8; // 更新时间
    google.protobuf.Timestamp DeletedAt = 9; // 删除时间（软删除）
}